--- a/Splash.html
+++ b/Splash.html
@@ -3,25 +3,25 @@
     <div id="im4j" class="gpd-navbar">
       <div id="i2cx" class="gpd-container">
         <div id="i39s" class="gdp-row">
-          <div id="iyg5" class="cell">
-            <a id="i8ttl" href="//41399ad.grapedrop.net" class="gpd-link-box"><img id="i98ol" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/5fe0bfa56984440bafb4db3b2ae3022b_grumble_helmet_v3_filter_2.jpg"/></a>
-          </div>
           <div id="iku1" class="cell gpd-navbar__menu">
             <a id="ij7d" href="" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
               </path>
               </svg></a>
           </div>
+          <div id="iyg5" class="cell">
+            <a id="i8ttl" href="//41399ad.grapedrop.net" class="gpd-link-box"><img id="i98ol" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/5fe0bfa56984440bafb4db3b2ae3022b_grumble_helmet_v3_filter_2.jpg"/></a>
+          </div>
           <div id="iqygz" class="cell gpd-navbar__items">
             <div id="icx92" class="gdp-row gpd-navbar__items-grid">
               <div id="iczti" class="cell gpd-navbar__item">
-                <a id="i2s7k" href="#iirfv" class="gpd-navbar__item-link">Blog</a>
+                <a id="i2s7k" href="#ict62" class="gpd-navbar__item-link">Production</a>
               </div>
               <div id="i0byf" class="cell gpd-navbar__item">
-                <a id="itpgo" href="#ict62" class="gpd-navbar__item-link">Portfolio</a>
+                <a id="itpgo" href="#iedea" class="gpd-navbar__item-link">Development</a>
               </div>
               <div id="i76ek" class="cell gpd-navbar__item">
-                <a id="i2zhr" href="#iedea" class="gpd-navbar__item-link">Shop</a>
+                <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
               </div>
               <div id="irxqe" class="cell gpd-navbar__item">
                 <a id="i21gv" href="https://www.instagram.com/" target="_blank" class="gpd-link-box"><span id="i8b7h" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -33,15 +33,8 @@
           </div>
           <div id="ijj8x" class="cell gpd-navbar__items">
             <div id="icj6r" class="gdp-row gpd-navbar__items-grid">
-              <div class="cell gpd-navbar__item">
-                <a href="https://www.instagram.com/grumblefiend/" target="_blank" class="gpd-link-box" id="im6ky"><span title="Instagram" class="gpd-icon" id="irzsk"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2m-.2 2C5.61 4 4 5.61 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8c1.99 0 3.6-1.61 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5M12 7c2.76 0 5 2.24 5 5s-2.24 5-5 5-5-2.24-5-5 2.24-5 5-5m0 2c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z">
-                  </path>
-                  </svg></span></a>
-                <a href="https://www.instagram.com/grumblefiend/" target="_blank" class="gpd-link-box" id="ivgah"><span title="YouTube" class="gpd-icon" id="icvr8"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z">
-                  </path>
-                  </svg></span></a>
+              <div id="i1aw2" class="cell gpd-navbar__item">
+                <a href="https://www.instagram.com/grumblefiend/" target="_blank" id="ivgah" class="gpd-link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
               </div>
             </div>
           </div>
@@ -52,60 +45,35 @@
       <div id="it1ag" class="cell">
         <h1 id="i7q2g" class="gpd-header">GrumbleFiend
         </h1>
-        <a id="iksel" href="https://www.spotify.com/ca-en/" target="_blank" class="gpd-link">Stream/Download</a>
       </div>
     </div>
-  </div>
-</section>
-<section id="iirfv" class="gpd-section">
-  <div id="itn8q" class="gpd-container">
-    <div id="ifojs" class="gdp-row">
-      <div id="i8rbs" class="cell">
-        <h1 id="irdyl" class="gpd-header">EP hits all streaming platforms August 9th.
-        </h1>
-        <div id="igfoc" class="gpd-text">Inlcudes six tracks, featuring "Love Life" and "Its Over."
-        </div>
-        <div id="iz6km" class="gpd-divider">
-        </div>
-        <a id="idu0c" href="https://www.spotify.com/ca-en/" class="gpd-link">Listen Now</a>
-      </div>
-      <div id="ijb49" class="cell">
-        <img src="https://images.unsplash.com/photo-1535925191244-17536ca4f8b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyNzA1fQ" id="idh7x"/>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="inb24" class="gpd-section">
-  <div id="iff01" class="gpd-container">
-    <h1 id="i5gzu" class="gpd-header">Tour Dates
-    </h1>
-    <div id="i22pi" class="gpd-text">Toronto - ScoatiaBank Stadium - May 3rd&nbsp;
-    </div>
-    <div id="iisxy" class="gpd-divider">
-    </div>
-    <div id="igp4w" class="gpd-text">Montreal - Montreal Stadium - May 9rd&nbsp;
-    </div>
-    <div id="itxhg" class="gpd-divider">
-    </div>
-    <div id="i11no" class="gpd-text">Vancouver - Vancouver Stadium - May 13rd&nbsp;
-    </div>
-    <div id="iw5c7" class="gpd-divider">
-    </div>
-    <div id="i1e8d" class="gpd-text">Calgary - Calgary Stadium - May 23rd&nbsp;
-    </div>
-    <div id="imfpk" class="gpd-divider">
-    </div>
-    <a id="idvel" href="https://www.ticketmaster.ca/" target="_blank" class="gpd-link">Get Ticket</a>
   </div>
 </section>
 <section id="ict62" class="gpd-section">
   <div id="i2l2b" class="gpd-container">
     <div id="i8kc2" class="gdp-row">
       <div id="ir8b2" class="cell">
-        <iframe allowfullscreen="allowfullscreen" id="iqlr1p" src="https://www.youtube.com/embed/hzxQvfpmebA?"></iframe>
+        <iframe allowfullscreen="allowfullscreen" id="iqlr1p" src="https://www.youtube.com/embed/OkAQ8DZqvUg?"></iframe>
       </div>
     </div>
-    <a id="ipji3" href="https://www.youtube.com/" target="_blank" class="gpd-link">More Videos</a>
+    <a id="ipji3" href="https://www.youtube.com/channel/UCzxbvmzVpOp4wLVjmqSKZzw" target="_blank" class="gpd-link">More Videos</a>
+  </div>
+</section>
+<section id="iirfv" class="gpd-section">
+  <div id="itn8q" class="gpd-container">
+    <div id="ifojs" class="gdp-row">
+      <div id="i8rbs" class="cell">
+        <h1 id="irdyl" class="gpd-header">Development
+        </h1>
+        <div id="igfoc" title="asf" class="gpd-text">This is where I would put information on projects. IF I HAD SOME!
+        </div>
+        <div id="iz6km" class="gpd-divider">
+        </div>
+      </div>
+      <div id="ijb49" class="cell">
+        <img id="izgf6" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/64ef2f43d39a4f96a47615b1b3ee1746__697e1f81-ecc0-42fe-be60-2f4cdb97597e.jpg"/>
+      </div>
+    </div>
   </div>
 </section>
 <section id="ivd83" class="gpd-section">
@@ -122,11 +90,15 @@
         </div>
       </div>
     </div>
+    <div class="gpd-text" id="i07np">
+      <div style="text-align: right;">Not Coming Soon
+      </div>
+    </div>
   </div>
 </section>
 <section id="ir4gt" class="gpd-section">
   <div id="ix2vp" class="gpd-container">
-    <a id="ivpoh" href="https://grapedrop.com/" target="_blank" class="gpd-link-box"><div id="if1fe" class="gpd-text">Powered by Grapedrop.
+    <a id="ivpoh" href="https://grapedrop.com/" target="_blank" class="gpd-link-box"><div id="if1fe" class="gpd-text">GRUMBLEFIEND
       </div></a>
   </div>
 </section>
