--- a/Splash.html
+++ b/Splash.html
@@ -1,4 +1,15 @@
-<section id="i0sok" class="gpd-section">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Your Page Title</title>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
+</head>
+<body>
+  <section id="i0sok" class="gpd-section">
   <div id="id36r" class="gpd-container">
     <div id="im4j" class="gpd-navbar">
       <div id="i2cx" class="gpd-container">
@@ -139,3 +150,4 @@
      .bind(items[i]))();
   }
 </script>
+  </body>
