--- a/Splash.html
+++ b/Splash.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Page Title</title>
+  <title>GrumbleFiend</title>
   <style>
+    /* Add smooth scrolling behavior to the page */
     html {
       scroll-behavior: smooth;
     }
   </style>
 </head>
 <body>
+  <!-- Navbar section -->
   <section id="i0sok" class="gpd-section">
-  <div id="id36r" class="gpd-container">
-    <div id="im4j" class="gpd-navbar">
-      <div id="i2cx" class="gpd-container">
-        <div id="i39s" class="gdp-row">
-          <div id="iku1" class="cell gpd-navbar__menu">
-            <a id="ij7d" href="" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
-              </path>
-              </svg></a>
-          </div>
-          <div id="iyg5" class="cell">
-            <a id="i8ttl" href="//41399ad.grapedrop.net" class="gpd-link-box"><img id="i98ol" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/5fe0bfa56984440bafb4db3b2ae3022b_grumble_helmet_v3_filter_2.jpg"/></a>
-          </div>
-          <div id="iqygz" class="cell gpd-navbar__items">
-            <div id="icx92" class="gdp-row gpd-navbar__items-grid">
-              <div id="iczti" class="cell gpd-navbar__item">
-                <a id="i2s7k" href="#ict62" class="gpd-navbar__item-link">Production</a>
-              </div>
-              <div id="i0byf" class="cell gpd-navbar__item">
-                <a id="itpgo" href="#iedea" class="gpd-navbar__item-link">Development</a>
-              </div>
-              <div id="i76ek" class="cell gpd-navbar__item">
-                <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
-              </div>
+    <div id="id36r" class="gpd-container">
+      <div id="im4j" class="gpd-navbar">
+        <div id="i2cx" class="gpd-container">
+          <div id="i39s" class="gdp-row">
+            <!-- Hamburger menu icon -->
+            <div id="iku1" class="cell gpd-navbar__menu">
+              <a id="ij7d" href="" class="gpd-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
+                  </path>
+                </svg>
+              </a>
+            </div>
+            <!-- Logo -->
+            <div id="iyg5" class="cell">
+              <a id="i8ttl" href="//41399ad.grapedrop.net" class="gpd-link-box">
+                <img id="i98ol" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/5fe0bfa56984440bafb4db3b2ae3022b_grumble_helmet_v3_filter_2.jpg"/>
+              </a>
+            </div>
+            <!-- Navbar items -->
+            <div id="iqygz" class="cell gpd-navbar__items">
+              <div id="icx92" class="gdp-row gpd-navbar__items-grid">
+                <!-- Production link -->
+                <div id="iczti" class="cell gpd-navbar__item">
+                  <a id="i2s7k" href="#ict62" class="gpd-navbar__item-link">Production</a>
+                </div>
+                <!-- Development link -->
+                <div id="i0byf" class="cell gpd-navbar__item">
+                  <a id="itpgo" href="#iedea" class="gpd-navbar__item-link">Development</a>
+                </div>
+                <!-- Cache link -->
+                <div id="i76ek" class="cell gpd-navbar__item">
+                  <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
+                </div>
+                <!-- Instagram link -->
               <div id="irxqe" class="cell gpd-navbar__item">
                 <a id="i21gv" href="https://www.instagram.com/" target="_blank" class="gpd-link-box"><span id="i8b7h" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2m-.2 2C5.61 4 4 5.61 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8c1.99 0 3.6-1.61 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5M12 7c2.76 0 5 2.24 5 5s-2.24 5-5 5-5-2.24-5-5 2.24-5 5-5m0 2c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z">
@@ -151,3 +164,4 @@
   }
 </script>
   </body>
+</html>
