--- a/Splash.html
+++ b/Splash.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>GrumbleFiend</title>
+  <link rel="stylesheet" type="text/css" href="Splash.css">
   <style>
     /* Add smooth scrolling behavior to the page */
     html {
@@ -130,6 +131,10 @@
   scroll-behavior: smooth;
   }
 </style>
+// This function initializes variables and provides two sub-functions. The first sub-function
+// creates an element to test for transition capabilities, and returns the name of the transition
+// property. The second sub-function animates an element from its current height to auto height
+// and back to 0 height using CSS transitions.
 <script>var items = document.querySelectorAll('#ij7d');
   for (var i = 0, len = items.length; i < len; i++) {
     (function(){
