--- a/Splash.html
+++ b/Splash.html
@@ -131,10 +131,10 @@
   scroll-behavior: smooth;
   }
 </style>
-// This function initializes variables and provides two sub-functions. The first sub-function
-// creates an element to test for transition capabilities, and returns the name of the transition
-// property. The second sub-function animates an element from its current height to auto height
-// and back to 0 height using CSS transitions.
+<!-- This function initializes variables and provides two sub-functions. The first sub-function
+creates an element to test for transition capabilities, and returns the name of the transition
+property. The second sub-function animates an element from its current height to auto height
+and back to 0 height using CSS transitions. -->
 <script>var items = document.querySelectorAll('#ij7d');
   for (var i = 0, len = items.length; i < len; i++) {
     (function(){
