Update and rename Index.html to splash.html

--- a/splash.html
+++ b/splash.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>GrumbleFiend</title>
-  <link rel="stylesheet" type="text/css" href="Splash.css">
+  <link rel="stylesheet" type="text/css" href="splash.css">
   <style>
     /* Add smooth scrolling behavior to the page */
     html {
