--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
             </div>
             <!-- Navbar items -->
-            <div id="iqygz" class="cell gpd-navbar__items">
+            <div id="iqygz" class="cell gpd-navbar__items" style="display: flex; justify-content: center;">
               <div id="icx92" class="gdp-row gpd-navbar__items-grid">
                 <!-- Production link -->
                 <div id="iczti" class="cell gpd-navbar__item">
@@ -47,9 +47,9 @@
                 <div id="i76ek" class="cell gpd-navbar__item">
                   <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
                 </div>
-                <!-- Instagram link -->
+                <!-- YouTube link -->
               <div id="irxqe" class="cell gpd-navbar__item">
-                <a id="i21gv" href="https://www.instagram.com/" target="_blank" class="gpd-link-box"><span id="i8b7h" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <a id="i21gv" href="https://www.youtube.com/@grumblefiend2578" target="_blank" class="gpd-link-box"><span id="i8b7h" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2m-.2 2C5.61 4 4 5.61 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8c1.99 0 3.6-1.61 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5M12 7c2.76 0 5 2.24 5 5s-2.24 5-5 5-5-2.24-5-5 2.24-5 5-5m0 2c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z">
                   </path>
                   </svg></span></a>
@@ -59,7 +59,7 @@
           <div id="ijj8x" class="cell gpd-navbar__items">
             <div id="icj6r" class="gdp-row gpd-navbar__items-grid">
               <div id="i1aw2" class="cell gpd-navbar__item">
-                <a href="https://www.instagram.com/grumblefiend/" target="_blank" id="ivgah" class="gpd-link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
+                <a href="https://www.youtube.com/@grumblefiend2578" target="_blank" id="ivgah" class="gpd-link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
               </div>
             </div>
           </div>
