--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
             </div>
             <!-- Navbar items -->
-            <div id="iqygz" class="cell gpd-navbar__items" style="display: flex; justify-content: center;">
+            <div id="iqygz" class="cell gpd-navbar__items">
               <div id="icx92" class="gdp-row gpd-navbar__items-grid">
                 <!-- Production link -->
                 <div id="iczti" class="cell gpd-navbar__item">
