--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
   <!-- Navbar section -->
-  <section id="i0sok" class="gpd-section">
-    <div id="id36r" class="gpd-container">
-      <div id="im4j" class="gpd-navbar">
-        <div id="i2cx" class="gpd-container">
-          <div id="i39s" class="gdp-row">
+  <section id="i0sok" class="section">
+    <div id="id36r" class="container">
+      <div id="im4j" class="navbar">
+        <div id="i2cx" class="container">
+          <div id="i39s" class="row">
             <!-- Hamburger menu icon -->
-            <div id="iku1" class="cell gpd-navbar__menu">
-              <a id="ij7d" href="" class="gpd-icon">
+            <div id="iku1" class="cell navbar__menu">
+              <a id="ij7d" href="" class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
                   </path>
@@ -28,27 +28,27 @@
             </div>
             <!-- Logo -->
             <div id="iyg5" class="cell">
-              <a id="i8ttl" href="//41399ad.grapedrop.net" class="gpd-link-box">
+              <a id="i8ttl" href="https://www.twitter.com/grumblefiend" class="link-box">
                 <img id="i98ol" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/5fe0bfa56984440bafb4db3b2ae3022b_grumble_helmet_v3_filter_2.jpg"/>
               </a>
             </div>
             <!-- Navbar items -->
-            <div id="iqygz" class="cell gpd-navbar__items">
-              <div id="icx92" class="gdp-row gpd-navbar__items-grid">
+            <div id="iqygz" class="cell navbar__items">
+              <div id="icx92" class="gdp-row navbar__items-grid">
                 <!-- Production link -->
-                <div id="iczti" class="cell gpd-navbar__item">
+                <div id="iczti" class="cell navbar__item">
                   <a id="i2s7k" href="#ict62" class="gpd-navbar__item-link">Production</a>
                 </div>
                 <!-- Development link -->
-                <div id="i0byf" class="cell gpd-navbar__item">
+                <div id="i0byf" class="cell navbar__item">
                   <a id="itpgo" href="#iedea" class="gpd-navbar__item-link">Development</a>
                 </div>
                 <!-- Cache link -->
-                <div id="i76ek" class="cell gpd-navbar__item">
+                <div id="i76ek" class="cell navbar__item">
                   <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
                 </div>
                 <!-- YouTube link -->
-              <div id="irxqe" class="cell gpd-navbar__item">
+              <div id="irxqe" class="cell navbar__item">
                 <a id="i21gv" href="https://www.youtube.com/@grumblefiend2578" target="_blank" class="gpd-link-box"><span id="i8b7h" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2m-.2 2C5.61 4 4 5.61 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8c1.99 0 3.6-1.61 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5M12 7c2.76 0 5 2.24 5 5s-2.24 5-5 5-5-2.24-5-5 2.24-5 5-5m0 2c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z">
                   </path>
@@ -56,9 +56,9 @@
               </div>
             </div>
           </div>
-          <div id="ijj8x" class="cell gpd-navbar__items">
-            <div id="icj6r" class="gdp-row gpd-navbar__items-grid">
-              <div id="i1aw2" class="cell gpd-navbar__item">
+          <div id="ijj8x" class="cell navbar__items">
+            <div id="icj6r" class="gdp-row navbar__items-grid">
+              <div id="i1aw2" class="cell navbar__item">
                 <a href="https://www.youtube.com/@grumblefiend2578" target="_blank" id="ivgah" class="gpd-link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
               </div>
             </div>
@@ -66,17 +66,17 @@
         </div>
       </div>
     </div>
-    <div id="i83me" class="gdp-row">
+    <div id="i83me" class="row">
       <div id="it1ag" class="cell">
-        <h1 id="i7q2g" class="gpd-header">GrumbleFiend
+        <h1 id="i7q2g" class="header">GrumbleFiend
         </h1>
       </div>
     </div>
   </div>
 </section>
-<section id="ict62" class="gpd-section">
-  <div id="i2l2b" class="gpd-container">
-    <div id="i8kc2" class="gdp-row">
+<section id="ict62" class="section">
+  <div id="i2l2b" class="container">
+    <div id="i8kc2" class="row">
       <div id="ir8b2" class="cell">
         <iframe allowfullscreen="allowfullscreen" id="iqlr1p" src="https://www.youtube.com/embed/OkAQ8DZqvUg?"></iframe>
       </div>
@@ -84,15 +84,15 @@
     <a id="ipji3" href="https://www.youtube.com/channel/UCzxbvmzVpOp4wLVjmqSKZzw" target="_blank" class="gpd-link">More Videos</a>
   </div>
 </section>
-<section id="iirfv" class="gpd-section">
-  <div id="itn8q" class="gpd-container">
-    <div id="ifojs" class="gdp-row">
+<section id="iirfv" class="section">
+  <div id="itn8q" class="container">
+    <div id="ifojs" class="row">
       <div id="i8rbs" class="cell">
-        <h1 id="irdyl" class="gpd-header">Development
+        <h1 id="irdyl" class="header">Development
         </h1>
-        <div id="igfoc" title="asf" class="gpd-text">This is where I would put information on projects. IF I HAD SOME!
+        <div id="igfoc" title="asf" class="text">This is where I would put information on projects. IF I HAD SOME!
         </div>
-        <div id="iz6km" class="gpd-divider">
+        <div id="iz6km" class="divider">
         </div>
       </div>
       <div id="ijb49" class="cell">
@@ -101,29 +101,29 @@
     </div>
   </div>
 </section>
-<section id="ivd83" class="gpd-section">
+<section id="ivd83" class="section">
   <div id="i1oil" href="#iedea" class="gpd-container">
     <h1 id="iedea" class="gpd-header">Merch
     </h1>
   </div>
 </section>
-<section id="iy6k2" class="gpd-section">
+<section id="iy6k2" class="section">
   <div class="gpd-container">
     <div id="in5pa">
       <div>
-        <div id="ecomm-in5pa" class="gpd-ecomm-trg">
+        <div id="ecomm-in5pa" class="ecomm-trg">
         </div>
       </div>
     </div>
-    <div class="gpd-text" id="i07np">
+    <div class="text" id="i07np">
       <div style="text-align: right;">Not Coming Soon
       </div>
     </div>
   </div>
 </section>
-<section id="ir4gt" class="gpd-section">
-  <div id="ix2vp" class="gpd-container">
-    <a id="ivpoh" href="https://grapedrop.com/" target="_blank" class="gpd-link-box"><div id="if1fe" class="gpd-text">GRUMBLEFIEND
+<section id="ir4gt" class="section">
+  <div id="ix2vp" class="container">
+    <a id="ivpoh" href="https://www.instagram.com/grumblefiend" target="_blank" class="link-box"><div id="if1fe" class="text">GRUMBLEFIEND
       </div></a>
   </div>
 </section>
