--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
       <div id="im4j" class="navbar">
         <div id="i2cx" class="container">
           <div id="i39s" class="row">
-            <!-- Hamburger menu icon -->
-            <div id="iku1" class="cell navbar__menu">
-              <a id="ij7d" href="" class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
-                  </path>
-                </svg>
-              </a>
-            </div>
             <!-- Logo -->
             <div id="iyg5" class="cell">
               <a id="i8ttl" href="https://www.twitter.com/grumblefiend" class="link-box">
@@ -34,18 +25,18 @@
             </div>
             <!-- Navbar items -->
             <div id="iqygz" class="cell navbar__items">
-              <div id="icx92" class="gdp-row navbar__items-grid">
+              <div id="icx92" class="row navbar__items-grid">
                 <!-- Production link -->
                 <div id="iczti" class="cell navbar__item">
-                  <a id="i2s7k" href="#ict62" class="gpd-navbar__item-link">Production</a>
+                  <a id="i2s7k" href="#ict62" class="navbar__item-link">Production</a>
                 </div>
                 <!-- Development link -->
                 <div id="i0byf" class="cell navbar__item">
-                  <a id="itpgo" href="#iedea" class="gpd-navbar__item-link">Development</a>
+                  <a id="itpgo" href="#iedea" class="navbar__item-link">Development</a>
                 </div>
                 <!-- Cache link -->
                 <div id="i76ek" class="cell navbar__item">
-                  <a id="i2zhr" href="#iy6k2" class="gpd-navbar__item-link">Cache</a>
+                  <a id="i2zhr" href="#iy6k2" class="navbar__item-link">Cache</a>
                 </div>
                 <!-- YouTube link -->
               <div id="irxqe" class="cell navbar__item">
@@ -57,9 +48,9 @@
             </div>
           </div>
           <div id="ijj8x" class="cell navbar__items">
-            <div id="icj6r" class="gdp-row navbar__items-grid">
+            <div id="icj6r" class="row navbar__items-grid">
               <div id="i1aw2" class="cell navbar__item">
-                <a href="https://www.youtube.com/@grumblefiend2578" target="_blank" id="ivgah" class="gpd-link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
+                <a href="https://www.youtube.com/@grumblefiend2578" target="_blank" id="ivgah" class="link-box"><img id="ii9px" src="https://cdn.grapedrop.com/u4439b0e7bf7a46eab941a14a9c870632/e065cafac09c45e9a3f6cdf3be1462c4_free-youtube-logo-icon-2431-thumb.png"/></a>
               </div>
             </div>
           </div>
@@ -81,7 +72,7 @@
         <iframe allowfullscreen="allowfullscreen" id="iqlr1p" src="https://www.youtube.com/embed/OkAQ8DZqvUg?"></iframe>
       </div>
     </div>
-    <a id="ipji3" href="https://www.youtube.com/channel/UCzxbvmzVpOp4wLVjmqSKZzw" target="_blank" class="gpd-link">More Videos</a>
+    <a id="ipji3" href="https://www.youtube.com/channel/UCzxbvmzVpOp4wLVjmqSKZzw" target="_blank" class="link">More Videos</a>
   </div>
 </section>
 <section id="iirfv" class="section">
@@ -102,13 +93,13 @@
   </div>
 </section>
 <section id="ivd83" class="section">
-  <div id="i1oil" href="#iedea" class="gpd-container">
+  <div id="i1oil" href="#iedea" class="container">
     <h1 id="iedea" class="gpd-header">Merch
     </h1>
   </div>
 </section>
 <section id="iy6k2" class="section">
-  <div class="gpd-container">
+  <div class="container">
     <div id="in5pa">
       <div>
         <div id="ecomm-in5pa" class="ecomm-trg">
